--- a/camara-node-sdk/examples/package.json
+++ b/camara-node-sdk/examples/package.json
@@ -8,9 +8,11 @@
     "start": "tsx watch express.ts"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "camara-node-sdk": "file:..",
-    "express": "^4.18.2",
-    "cookie-session": "^2.0.0"
+    "cookie-session": "^2.0.0",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@tsconfig/node18": "^2.0.0",
