--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -105,6 +105,7 @@ services:
       DATABASE_HOST: "mongodb:27017"
       DATABASE_NAME: "authserver-telefonica"
       OPERATOR_ID: "TELEFONICA"
+      ADDITIONAL_AUDIENCES: "" # TODO two aggregators
     ports:
       - 9010:9010
 
@@ -119,6 +120,7 @@ services:
       DATABASE_HOST: "mongodb:27017"
       DATABASE_NAME: "authserver-vodafone"
       OPERATOR_ID: "VODAFONE"
+      ADDITIONAL_AUDIENCES: "" # TODO two aggregators
     ports:
       - 9020:9020
 
@@ -146,9 +148,9 @@ services:
       context: .
     environment:
       PORT: 3000
-      # Contracting Operator: TEF
+      # Aggregator configuration
       CAMARA_API_URL: 'http://aggregator-telco-router-2:3322'
-      CAMARA_AUTH_URL: 'http://aggregator-telco-router-2:3322/es/oauth2/authorize'
+      CAMARA_AUTH_URL: 'http://aggregator-telco-router-2:3322/es/oauth2'
       CAMARA_ISSUER: '73902489-c201-4819-bdf9-3708a484fe21'
     ports:
       - 3000:3000
