--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -106,7 +106,7 @@ services:
       HOST: "http://operator-platform-authserver-1:9010"
       DATABASE_HOST: "mongodb:27017"
       DATABASE_NAME: "authserver-telefonica"
-      ADDITIONAL_AUDIENCES: "http://aggregator-telco-router-1:3311/es/,http://aggregator-telco-router-2:3322/es/"
+      ADDITIONAL_AUDIENCES: "http://aggregator-telco-router-1:3311/,http://aggregator-telco-router-2:3322/"
       OPERATOR_ID: "TELEFONICA"
     ports:
       - 9010:9010
@@ -121,7 +121,7 @@ services:
       HOST: "http://operator-platform-authserver-2:9020"
       DATABASE_HOST: "mongodb:27017"
       DATABASE_NAME: "authserver-vodafone"
-      ADDITIONAL_AUDIENCES: "http://aggregator-telco-router-1:3311/es/,http://aggregator-telco-router-2:3322/es/"
+      ADDITIONAL_AUDIENCES: "http://aggregator-telco-router-1:3311/,http://aggregator-telco-router-2:3322/"
       OPERATOR_ID: "VODAFONE"
     ports:
       - 9020:9020
@@ -151,8 +151,8 @@ services:
     environment:
       PORT: 3000
       # Aggregator configuration
-      CAMARA_API_URL: 'http://aggregator-telco-router-2:3322/es/api'
-      CAMARA_AUTH_URL: 'http://aggregator-telco-router-2:3322/es/oauth2'
+      CAMARA_API_URL: 'http://aggregator-telco-router-2:3322/api'
+      CAMARA_AUTH_URL: 'http://aggregator-telco-router-2:3322/oauth2'
       CAMARA_ISSUER: '73902489-c201-4819-bdf9-3708a484fe21'
       CAMARA_CLIENT_ID: '73902489-c201-4819-bdf9-3708a484fe21'
       # For JWKS feature 
