add: deployment env var

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -140,6 +140,8 @@ services:
   mongo-seed:
     build:
       context: ./mongo-seed
+    environment:
+      DEPLOYMENT: 'false'
     depends_on:
       - mongodb
       - operator-platform-authserver-1
