--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,8 @@ services:
     environment:
       PORT: 3311
       TELCO_FINDER_HOST: "http://aggregator-telco-finder-1:2211"
-      HOST: "http://aggregator-telco-router-1:3311"
+      HOST: "http://aggregator-telco-router-1.opengateway.baikalplatform.com"
+      # HOST: "http://aggregator-telco-router-1:3311" ###
       DATABASE_HOST: "mongodb:27017"
       DATABASE_NAME: "aggregator-telco-router-1"
     ports:
@@ -39,7 +40,8 @@ services:
     environment:
       PORT: 3322
       TELCO_FINDER_HOST: "http://aggregator-telco-finder-2:2222"
-      HOST: "http://aggregator-telco-router-2:3322"
+      HOST: "http://aggregator-telco-router-2.opengateway.baikalplatform.com"
+      # HOST: "http://aggregator-telco-router-2:3322" ###
       DATABASE_HOST: "mongodb:27017"
       DATABASE_NAME: "aggregator-telco-router-2"
     ports:
@@ -103,10 +105,12 @@ services:
       - mongodb
     environment:
       PORT: 9010
-      HOST: "http://operator-platform-authserver-1:9010"
+      HOST: "http://operator-platform-authserver-1.opengateway.baikalplatform.com"
+      # HOST: "http://operator-platform-authserver-1:9010" ###
       DATABASE_HOST: "mongodb:27017"
       DATABASE_NAME: "authserver-telefonica"
-      ADDITIONAL_AUDIENCES: "http://aggregator-telco-router-1:3311/,http://aggregator-telco-router-2:3322/"
+      ADDITIONAL_AUDIENCES: "https://aggregator-telco-router-1.opengateway.baikalplatform.com/,http://aggregator-telco-router-2.opengateway.baikalplatform.com/"
+      # ADDITIONAL_AUDIENCES: "http://aggregator-telco-router-1:3311/,http://aggregator-telco-router-2:3322/" ###
       OPERATOR_ID: "TELEFONICA"
     ports:
       - 9010:9010
@@ -118,10 +122,12 @@ services:
       - mongodb
     environment:
       PORT: 9020
-      HOST: "http://operator-platform-authserver-2:9020"
+      HOST: "http://operator-platform-authserver-2.opengateway.baikalplatform.com"
+      # HOST: "http://operator-platform-authserver-2:9020" ###
       DATABASE_HOST: "mongodb:27017"
       DATABASE_NAME: "authserver-vodafone"
-      ADDITIONAL_AUDIENCES: "http://aggregator-telco-router-1:3311/,http://aggregator-telco-router-2:3322/"
+      ADDITIONAL_AUDIENCES: "https://aggregator-telco-router-1.opengateway.baikalplatform.com/,http://aggregator-telco-router-2.opengateway.baikalplatform.com/"
+      # ADDITIONAL_AUDIENCES: "http://aggregator-telco-router-1:3311/,http://aggregator-telco-router-2:3322/" ###
       OPERATOR_ID: "VODAFONE"
     ports:
       - 9020:9020
@@ -151,8 +157,10 @@ services:
     environment:
       PORT: 3000
       # Aggregator configuration
-      CAMARA_API_URL: 'http://aggregator-telco-router-2:3322/api'
-      CAMARA_AUTH_URL: 'http://aggregator-telco-router-2:3322/oauth2'
+      CAMARA_API_URL: 'https://aggregator-telco-router-2.opengateway.baikalplatform.com/api'
+      # CAMARA_API_URL: 'http://aggregator-telco-router-2:3322/api'
+      CAMARA_AUTH_URL: 'https://aggregator-telco-router-2.opengateway.baikalplatform.com/oauth2'
+      # CAMARA_AUTH_URL: 'http://aggregator-telco-router-2:3322/oauth2'
       CAMARA_ISSUER: '73902489-c201-4819-bdf9-3708a484fe21'
       CAMARA_CLIENT_ID: '73902489-c201-4819-bdf9-3708a484fe21'
       # For JWKS feature
