--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     environment:
       PORT: 3311
       TELCO_FINDER_HOST: "http://aggregator-telco-finder-1:2211"
-      HOST: "http://aggregator-telco-router-1.opengateway.baikalplatform.es"
+      HOST: "https://aggregator-telco-router-1.opengateway.baikalplatform.es"
       # HOST: "http://aggregator-telco-router-1:3311" ###
       DATABASE_HOST: "mongodb:27017"
       DATABASE_NAME: "aggregator-telco-router-1"
@@ -41,7 +41,7 @@ services:
     environment:
       PORT: 3322
       TELCO_FINDER_HOST: "http://aggregator-telco-finder-2:2222"
-      HOST: "http://aggregator-telco-router-2.opengateway.baikalplatform.es"
+      HOST: "https://aggregator-telco-router-2.opengateway.baikalplatform.es"
       # HOST: "http://aggregator-telco-router-2:3322" ###
       DATABASE_HOST: "mongodb:27017"
       DATABASE_NAME: "aggregator-telco-router-2"
@@ -111,7 +111,7 @@ services:
       # HOST: "http://operator-platform-authserver-1:9010" ###
       DATABASE_HOST: "mongodb:27017"
       DATABASE_NAME: "authserver-telefonica"
-      ADDITIONAL_AUDIENCES: "https://aggregator-telco-router-1.opengateway.baikalplatform.es/,http://aggregator-telco-router-2.opengateway.baikalplatform.es/"
+      ADDITIONAL_AUDIENCES: "https://aggregator-telco-router-1.opengateway.baikalplatform.es/,https://aggregator-telco-router-2.opengateway.baikalplatform.es/"
       # ADDITIONAL_AUDIENCES: "http://aggregator-telco-router-1:3311/,http://aggregator-telco-router-2:3322/" ###
       OPERATOR_ID: "TELEFONICA"
     ports:
@@ -128,7 +128,7 @@ services:
       # HOST: "http://operator-platform-authserver-2:9020" ###
       DATABASE_HOST: "mongodb:27017"
       DATABASE_NAME: "authserver-vodafone"
-      ADDITIONAL_AUDIENCES: "https://aggregator-telco-router-1.opengateway.baikalplatform.es/,http://aggregator-telco-router-2.opengateway.baikalplatform.es/"
+      ADDITIONAL_AUDIENCES: "https://aggregator-telco-router-1.opengateway.baikalplatform.es/,https://aggregator-telco-router-2.opengateway.baikalplatform.es/"
       # ADDITIONAL_AUDIENCES: "http://aggregator-telco-router-1:3311/,http://aggregator-telco-router-2:3322/" ###
       OPERATOR_ID: "VODAFONE"
     ports:
