chore: configure azure envs (wip)

--- a/operator-platform/apigateway/config/config-operator-1.yaml
+++ b/operator-platform/apigateway/config/config-operator-1.yaml
@@ -5,6 +5,8 @@ _transform: true
 consumers:
   - username: johndoe
     custom_id: johndoe
+  - username: johndoe-azure
+    custom_id: johndoe-azure
 
 jwt_secrets:
   - consumer: johndoe
