--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -154,6 +154,7 @@ services:
       - operator-platform-authserver-2
 
   demo-app:
+    restart: always
     build:
       context: .
     environment:
