--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
   aggregator-telco-finder-1:
     build:
       context: ./aggregator/telco-finder
+    restart: on-failure
     environment:
       PORT: 2211
     ports:
@@ -16,6 +17,7 @@ services:
   aggregator-telco-finder-2:
     build:
       context: ./aggregator/telco-finder
+    restart: on-failure
     environment:
       PORT: 2222
     ports:
@@ -24,6 +26,7 @@ services:
   aggregator-telco-router-1:
     build:
       context: ./aggregator/telco-router
+    restart: on-failure
     environment:
       PORT: 3311
       TELCO_FINDER_HOST: "http://aggregator-telco-finder-1:2211"
@@ -36,6 +39,7 @@ services:
   aggregator-telco-router-2:
     build:
       context: ./aggregator/telco-router
+    restart: on-failure
     environment:
       PORT: 3322
       TELCO_FINDER_HOST: "http://aggregator-telco-finder-2:2222"
@@ -51,6 +55,7 @@ services:
   operator-platform-apigateway-1:
     image: kong:3.1.1-alpine
     user: kong
+    restart: on-failure
     environment:
       KONG_DATABASE: "off"
       KONG_PLUGINS: "bundled,log-signature"
@@ -67,6 +72,7 @@ services:
   operator-platform-apigateway-2:
     image: kong:3.1.1-alpine
     user: kong
+    restart: on-failure
     environment:
       KONG_DATABASE: "off"
       KONG_PLUGINS: "bundled,log-signature"
@@ -83,6 +89,7 @@ services:
   operator-platform-camara-apis-1:
     build:
       context: ./operator-platform/camara-apis
+    restart: on-failure
     environment:
       PORT: 8001
     ports:
@@ -91,6 +98,7 @@ services:
   operator-platform-camara-apis-2:
     build:
       context: ./operator-platform/camara-apis
+    restart: on-failure
     environment:
       PORT: 8002
     ports:
@@ -101,6 +109,7 @@ services:
       context: ./operator-platform/authserver
     depends_on:
       - mongodb
+    restart: on-failure
     environment:
       PORT: 9010
       HOST: "http://operator-platform-authserver-1:9010"
@@ -116,6 +125,7 @@ services:
       context: ./operator-platform/authserver
     depends_on:
       - mongodb
+    restart: on-failure
     environment:
       PORT: 9020
       HOST: "http://operator-platform-authserver-2:9020"
@@ -134,6 +144,7 @@ services:
     ports:
       - 27017:27017
     command: --quiet --logpath /dev/null
+    restart: on-failure
     volumes:
       - mongodbdata:/data/db
 
@@ -148,6 +159,7 @@ services:
   demo-app:
     build:
       context: .
+    restart: on-failure
     environment:
       PORT: 3000
       # Aggregator configuration
