--- a/camara-sdks/sdks/camara-node-sdk/project.json
+++ b/camara-sdks/sdks/camara-node-sdk/project.json
@@ -1,7 +1,6 @@
 {
-    "root": "sdks/camara-node-sdk/",
-    "projectType": "library",
-    "tags": [
-        "type:lib"
-    ]
+  "name": "camara-node-sdk",
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
+  "projectType": "library",
+  "tags": ["type:lib"]
 }
