--- a/camara-sdks/sdks/camara-express-sdk/package.json
+++ b/camara-sdks/sdks/camara-express-sdk/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "npm run prepare",
     "preprepare": "rm -rf dist",
+    "prepare": "tsc -p tsconfig-esm.json && tsc -p tsconfig-cjs.json",
     "format": "prettier --write ."
   },
   "dependencies": {
