--- a/aggregator/telco-router/service/src/requirements.txt
+++ b/aggregator/telco-router/service/src/requirements.txt
@@ -13,6 +13,7 @@ jsonschema==4.17.3
 rfc3987==1.3.8
 phonenumbers==8.13.7
 cachetools==5.3.0
+retry==0.9.2
 gunicorn==20.1.0
 freezegun==1.2.2
 coverage==7.2.2
